# ai-inference-observability-platform

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  proxy.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/: dependabot.yml
benchmarks/: perf_review.py  run_benchmark.py
ci/: .github_workflows_main.yml
docker/: Dockerfile  alertmanager.yml  docker-compose.multi.yml  docker-compose.otel.yml  docker-compose.yml  nginx-lb.conf  otel-collector-config.yml  prometheus.yml
docs/: API.md  PR_DESCRIPTION.md  deploy-report-20260629.md  deployment-guide.md  final-deployment-report-20260629.md  k8s-deployment.md  multi-node-architecture.md  opentelemetry.md  production-readiness-checklist.md  troubleshooting-k8s.md
helm/: Chart.yaml  values-dev.yaml  values-docker-desktop.yaml  values-prod.yaml  values.yaml
k8s/: configmap.yaml  hpa.yaml  kustomization.yaml  manifests.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  priorityclass.yaml  proxy-deployment.yaml  proxy-service.yaml  pvc.yaml  serviceaccount.yaml  vllm-deployment.yaml  vllm-service.yaml
monitoring/: alerts.yml
reports/: ci-fix-summary.md  ci-mypy-k8s-fix.md  ci-sarif-fix.md  ci-security-pipeline-fix.md  final-production-readiness.md  production-gap-analysis.md  production-readiness-100.md  repository-analysis.md
scripts/: deploy-windows.ps1  deploy.sh  setup.sh  validate.ps1
tests/: conftest.py  helpers.py  test_concurrent.py  test_edge_cases.py  test_latency_metrics.py  test_latency_utils.py  test_telemetry.py
vllm_patch/: outputs.py  (+3 more)
(+39 files in other folders)
