[project]
name = "ai-inference-observability-platform"
version = "1.2.0"
description = "Production-grade latency instrumentation proxy for vLLM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["proxy.py", "vllm_patch", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["vllm_patch"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: fast unit tests, no network",
    "integration: FastAPI integration tests with mocked upstream",
    "e2e: end-to-end tests requiring running vLLM (skipped by default)",
    "benchmark: performance benchmark tests",
    "regression: backward-compatibility regression tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
